@@ -9,21 +9,44 @@ kmeans <- function(data, clusters) {
     .Call('RcppMLPACK_kmeans', PACKAGE = 'RcppMLPACK', data, clusters)
 }
 
+#' Run a Logistic Regression given training data (and optional test data).
+#'
+#' This function uses a train set matrix and vector of target labels to run
+#' a logistic regression. If an optional test data set is supplied, it will
+#' be evaluated given the estimates from the initial test set.
+#'
+#' @title Run a Logistic Regression
+#' @param train A matrix of training data values
+#' @param labels An integer vector of target (class) labels, with the same 
+#'  length as the training data set
+#' @param test An optional test set, with the same number of columns as
+#'  the test set.
+#' @return A list with several components: means of training data means,
+#'  variance of training data variances, probanbilities of training data
+#'  class probabilities. If a test data set was supplied an estimated
+#'  classification vector is also returned.
+#' @examples
+#' data(trainSet)
+#' mat <- t(trainSet[, -5])     ## train data, transpose and removing class labels
+#' lab <- trainSet[, 5]         ## class labels for train set
+#' logisticRegression(mat, lab)
+#' testMat <- t(testSet[, -5])  ## test data
+#' logisticRegression(mat, lab, testMat)
 logisticRegression <- function(train, labels, test = NULL) {
     .Call('RcppMLPACK_logisticRegression', PACKAGE = 'RcppMLPACK', train, labels, test)
 }
 
 #' Run a Naive Bayes Classifier given training data (and optional test data).
 #'
-#' This function uses train set matrix and vector of target labels to run
+#' This function uses a train set matrix and vector of target labels to run
 #' a naive Bayes classifier for an externally given nummber of class. If
-#' an optional test data set is supplied, it will be evulated given the
-#' estimated from the initial test set.
+#' an optional test data set is supplied, it will be evaluated given the
+#' estimates from the initial test set.
 #'
 #' @title Run a Naive Bayes Classifier
 #' @param train A matrix of training data values
 #' @param labels An integer vector of target (class) labels, with the same 
-#'  length and the training data set
+#'  length as the training data set
 #' @param classes An integer with the given number of classes
 #' @param test An optional test set, with the same number of columns as
 #'  the test set.
@@ -33,11 +56,11 @@ logisticRegression <- function(train, labels, test = NULL) {
 #'  classification vector is also returned.
 #' @examples
 #' data(trainSet)
-#' M <- t(trainSet[, -5])    ## train data, transpose and removing class labels
-#' lb <- trainSet[, 5]       ## class labels for train set
-#' naiveBayesClassifier(M, lb, 2L)
-#' tM <- t(testSet[, -5])    ## test data
-#' naiveBayesClassifier(M, lb, 2L, tM)
+#' mat <- t(trainSet[, -5])     ## train data, transpose and removing class labels
+#' lab <- trainSet[, 5]         ## class labels for train set
+#' naiveBayesClassifier(mat, lab, 2L)
+#' testMat <- t(testSet[, -5])  ## test data
+#' naiveBayesClassifier(mat, lab, 2L, testMat)
 naiveBayesClassifier <- function(train, labels, classes, test = NULL) {
     .Call('RcppMLPACK_naiveBayesClassifier', PACKAGE = 'RcppMLPACK', train, labels, classes, test)
 }
