@@ -1,3 +1,9 @@
+2017-02-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/logisticRegression.cpp: Added documentation and example
+	* man/naiveBayesClassifier.Rd: Ditto
+	* NAMESPACE: Exported logisticRegression
+
 2017-02-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Note issue with RStudio IDE
